[tool.poetry]
name = "muscatplus_indexer"
version = "v1.0.4"
description = ""
authors = ["Andrew Hankinson <andrew.hankinson@rism.digital>"]

[tool.poetry.dependencies]
python = "^3.9"
dbutils = "^3.0"
mysqlclient = "^2.2.4"
pyyaml = "^6.0.0"
edtf = {git = "https://github.com/rism-digital/python-edtf.git", rev = "performance-enhancements"}
httpx = "^0.27.0"
verovio = { version = "^4.0.0", allow-prereleases = true }
sentry-sdk = "^1.10.1"
orjson = "^3.9.15"
pymarc = "^5.0.0"
psycopg = {extras = ["pool"], version = "^3.1.10"}

[tool.poetry.dev-dependencies]
ipython = "^8.0.0"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
priority = "supplemental"


[tool.poetry.group.dev.dependencies]
deptry = "^0.13.0"

[tool.black]
line-length = 121

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.masonry.api"
